# lp-solver

./: Cargo.toml
data/: data_20230406_195356.csv  data_20230406_202809.csv  data_equal.csv  data_equal_none.json  data_linear.csv  data_linear_none.json  data_random.csv  data_random_equal.json  data_random_greedy.json  data_random_none.json  data_test.json
src/: algorithm.rs  comparison.rs  custom_solver.rs  heuristics.rs  integer_solver.rs  lib.rs  main.rs  solution.rs  solver.rs  weight_functions.rs
